--- a/styles/style2.css
+++ b/styles/style2.css
@@ -8677,7 +8677,7 @@ font-family: 'Shantell Sans', cursive;
   position: relative;
 }
 .section-lp-tabs .title span::before {
-  background-image: url("https://5289388.fs1.hubspotusercontent-na1.net/hubfs/5289388/website/surlignage.svg");
+  background-image: url("");
   background-position: 50% center;
   background-repeat: no-repeat;
   background-size: 100%;
