--- a/styles/style.css
+++ b/styles/style.css
@@ -1167,8 +1167,8 @@ svg {
 }
 .flecheposition{
   position: absolute;
-  width: 50%;
-  bottom: -170px;
+  width: 30%;
+  bottom: -100px;
   left: 210px;
 }
 .material-symbols-outlined {
@@ -2538,17 +2538,18 @@ font-family: 'Shantell Sans', cursive;
   }
 }
 .section-flow .title span:before {
-  background-image: url();
+  background-image: url(../assets/brush.png);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: 100%;
   content: "";
-  height: 55px;
-  left: 0;
+  height: 65px;
+  left: -131px;
+  z-index: -100;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 100%;
+  width: 900px;
 }
 @media screen and (max-width: 380px) {
   .section-flow .title span:before {
@@ -3529,17 +3530,18 @@ font-family: 'Shantell Sans', cursive;
   }
 }
 .section-testimonial .title span:before {
-  background-image: url();
+  background-image: url(../assets/brush.png);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: 100%;
   content: "";
   height: 55px;
-  left: 0;
+  left: -137px;
+  z-index: -100;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 100%;
+  width: 900px;
 }
 .section-testimonial .left.img-wrapper {
   border-radius: 10px;
