--- a/styles/style2.css
+++ b/styles/style2.css
@@ -1193,6 +1193,7 @@ mark {
 .col-3 {
   flex: 0 0 25%;
   max-width: 25%;
+  margin-top: 5%;
 }
 .col-4 {
   flex: 0 0 33.3333%;
@@ -7616,7 +7617,7 @@ p.bold {
   }
 }
 .blog-single-hero .tag {
-  color: var(--theme);
+  color: #B8287C;
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.05em;
